Content added for the dates section.

--- a/pages/08_dates.html
+++ b/pages/08_dates.html
@@ -41,19 +41,347 @@
       <h2>Scroll-down to view!</h2>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Dates: </h3>
+        <h3>Dates: new Date()</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
           <div id="datesCode_1"></div>
         </div>
         <!-- Displays the code outcome. -->
-        <button type="button" class="outcomeBut">Show Outcome</button>
+        <button type="button" class="outcomeBut" id="dateBut_1">Show Outcome</button>
 
         <div class="hide">
           <div class="codeOutcomeCont">
             <!-- The result. -->
             <div id="datesOutput_1"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Dates: toLocaleTimeString()</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="datesCode_2"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut" id="dateBut_2">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="datesOutput_2"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Dates: getFullYear()</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="datesCode_3"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut" id="dateBut_3">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="datesOutput_3"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Dates: getMonth()</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="datesCode_4"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut" id="dateBut_4">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="datesOutput_4"></div>
+            <div id="datesOutput_4b"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Dates: getDate()</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="datesCode_5"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut" id="dateBut_5">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="datesOutput_5"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Dates: getDay()</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="datesCode_6"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut" id="dateBut_6">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="datesOutput_6"></div>
+            <div id="datesOutput_6b"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Dates: getTime()</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="datesCode_7"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut" id="dateBut_7">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="datesOutput_7"></div>
+            <div id="datesOutput_7b"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Dates: Date.now()</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="datesCode_8"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut" id="dateBut_8">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="datesOutput_8"></div>
+            <div id="datesOutput_8b"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Dates: getHours()</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="datesCode_9"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut" id="dateBut_9">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="datesOutput_9"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Dates: getMinutes()</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="datesCode_10"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut" id="dateBut_10">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="datesOutput_10"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Dates: getSeconds()</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="datesCode_11"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut" id="dateBut_11">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="datesOutput_11"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Dates: getMilliseconds()</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="datesCode_12"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut" id="dateBut_12">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="datesOutput_12"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Dates: setFullYear()</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="datesCode_13"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut" id="dateBut_13">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="datesOutput_13"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Dates: setFullYear()</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="datesCode_14"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut" id="dateBut_14">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="datesOutput_14"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Dates: setFullYear()</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="datesCode_15"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut" id="dateBut_15">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="datesOutput_15"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Dates: setMonth()</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="datesCode_16"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut" id="dateBut_16">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="datesOutput_16"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Dates: setMonth()</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="datesCode_17"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut" id="dateBut_17">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="datesOutput_17"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Dates: setTime()</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="datesCode_18"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut" id="dateBut_18">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="datesOutput_18"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Dates: setTime()</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="datesCode_19"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut" id="dateBut_19">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="datesOutput_19"></div>
           </div>
         </div>
       </div>
