split() added to Strings.

--- a/pages/06_strings.html
+++ b/pages/06_strings.html
@@ -365,6 +365,25 @@
         </div>
       </div>
       <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Strings: split()</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="stringsCode_19"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="stringsOutput_19"></div>
+            <div id="stringsOutput_19b"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
 
     </main>
 
