Content added to the functions section.

--- a/pages/11_functions.html
+++ b/pages/11_functions.html
@@ -41,7 +41,7 @@
       <h2>Scroll-down to view!</h2>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Functions: </h3>
+        <h3>Functions: Declarative / Named</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -54,6 +54,169 @@
           <div class="codeOutcomeCont">
             <!-- The result. -->
             <div id="functionsOutput_1"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Functions: Expressions / Anonymous</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="functionsCode_2"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="functionsOutput_2"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Functions: Default Parameters</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="functionsCode_3"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="functionsOutput_3"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Functions: Default Parameters</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="functionsCode_4"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="functionsOutput_4"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Functions: Arrow Functions</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="functionsCode_5"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="functionsOutput_5"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Functions: Arrow Functions</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="functionsCode_6"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="functionsOutput_6"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Functions: Arrow Functions</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="functionsCode_7"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="functionsOutput_7"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Functions: Arrow Functions</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="functionsCode_8"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="functionsOutput_8"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Functions: Arrow Functions</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="functionsCode_9"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="functionsOutput_9"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Functions: IIFE</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="functionsCode_10"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="functionsOutput_10"></div>
+            <div id="functionsOutput_10b"></div>
           </div>
         </div>
       </div>
