Additions to the functions section.

--- a/pages/11_functions.html
+++ b/pages/11_functions.html
@@ -221,6 +221,78 @@
         </div>
       </div>
       <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Functions: call()</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="functionsCode_11"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="functionsOutput_11"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Functions: call() with Arguments</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="functionsCode_12"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="functionsOutput_12"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Functions: apply()</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="functionsCode_13"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="functionsOutput_13"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Functions: apply() with Arguments</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="functionsCode_14"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="functionsOutput_14"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
 
     </main>
 
