--- a/pages/09_arrays.html
+++ b/pages/09_arrays.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Stewart MacLeman">
     <meta name="description" content="A JavaScript Cheat-Sheet.">
+    <link rel="icon" href="../favicon.ico">
     <link rel="stylesheet" href="../styles.css">
     <script src="../scripts/09_arrays.js" defer></script>
     <script src="../main.js" defer></script>
